update product service class