@@ -6,14 +6,19 @@ import edu.icet.ecom.model.dto.ProductDto;
 import edu.icet.ecom.model.dto.ProductVariantDto;
 import edu.icet.ecom.model.entity.ProductEntity;
 import edu.icet.ecom.model.entity.ProductVariantEntity;
+import edu.icet.ecom.model.entity.StockLogEntity;
 import edu.icet.ecom.repository.ProductRepository;
 import edu.icet.ecom.repository.ProductVariantRepository;
+import edu.icet.ecom.repository.StockLogRepository;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,15 +27,25 @@ public class ProductService {
 
     private final ProductVariantRepository variantRepository;
     private final ProductRepository productRepository;
+    private final StockLogRepository logRepository;
     private final ModelMapper modelMapper;
 
     @Transactional
     public void saveProduct(ProductDto productDto) {
         ProductEntity entity = modelMapper.map(productDto, ProductEntity.class);
 
+        // Manual Timestamp Setting
+        LocalDateTime now = LocalDateTime.now();
+        entity.setCreatedAt(now);
+        entity.setUpdatedAt(now);
+
         if (entity.getVariants() != null) {
             entity.getVariants().forEach(variant -> {
                 variant.setProduct(entity);
+                // Ensure a Variant ID exists for the Stock Log relationship
+                if (variant.getVariantId() == null) {
+                    variant.setVariantId(UUID.randomUUID().toString());
+                }
                 variant.setSku(generateSku(entity, variant));
                 if (variant.getBarcodeId() == null || variant.getBarcodeId().isEmpty()) {
                     variant.setBarcodeId(generateUniqueBarcode());
@@ -40,6 +55,9 @@ public class ProductService {
 
         refreshProductMetrics(entity);
         productRepository.save(entity);
+
+        // Trigger initial stock logs so reports are populated
+        createInitialStockLogs(entity);
     }
 
     @Transactional
@@ -47,14 +65,11 @@ public class ProductService {
         ProductEntity existingEntity = productRepository.findById(productDto.getProductId())
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
 
-        // Update fields only if they are provided in the DTO
+        existingEntity.setUpdatedAt(LocalDateTime.now());
+
         if (productDto.getProductName() != null) existingEntity.setProductName(productDto.getProductName());
         if (productDto.getCategory() != null) existingEntity.setCategory(productDto.getCategory());
         if (productDto.getBasePrice() != null) existingEntity.setBasePrice(productDto.getBasePrice());
-        if (productDto.getCurrency() != null) existingEntity.setCurrency(productDto.getCurrency());
-        if (productDto.getDiscountPercentage() != null) existingEntity.setDiscountPercentage(productDto.getDiscountPercentage());
-        if (productDto.getMaterial() != null) existingEntity.setMaterial(productDto.getMaterial());
-        if (productDto.getSeason() != null) existingEntity.setSeason(productDto.getSeason());
 
         if (productDto.getVariants() != null) {
             for (ProductVariantDto vDto : productDto.getVariants()) {
@@ -77,102 +92,70 @@ public class ProductService {
         productRepository.save(existingEntity);
     }
 
-    // --- Dynamic Data Mapping (Fixes the Nulls) ---
+    private void createInitialStockLogs(ProductEntity entity) {
+        if (entity.getVariants() != null) {
+            entity.getVariants().forEach(variant -> {
+                StockLogEntity log = new StockLogEntity();
+                log.setVariant(variant);
+                log.setBarcodeId(variant.getBarcodeId());
+                log.setQuantityChange(variant.getStockQuantity());
+                log.setUpdateReason("INITIAL_STOCK_ADD");
+                log.setTimestamp(LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
+                logRepository.save(log);
+            });
+        }
+    }
 
     public List<ProductDto> getAllProducts() {
-        return productRepository.findAll()
-                .stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        return productRepository.findAll().stream().map(this::convertToDto).collect(Collectors.toList());
     }
 
     public ProductDto getProductById(Integer id) {
         ProductEntity entity = productRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Product with ID " + id + " not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Product ID " + id + " not found"));
         return convertToDto(entity);
     }
 
-    /**
-     * Helper to map Entity to DTO and fill transient fields (Colors, Sizes, Totals)
-     */
     private ProductDto convertToDto(ProductEntity entity) {
         ProductDto dto = modelMapper.map(entity, ProductDto.class);
-
         if (entity.getVariants() != null && !entity.getVariants().isEmpty()) {
-            // 1. Extract Unique Sizes
-            dto.setAvailableSizes(entity.getVariants().stream()
-                    .map(ProductVariantEntity::getSize)
-                    .distinct()
-                    .collect(Collectors.toList()));
+            dto.setAvailableSizes(entity.getVariants().stream().map(ProductVariantEntity::getSize).distinct().toList());
+            dto.setAvailableColors(entity.getVariants().stream().map(ProductVariantEntity::getColor).distinct().toList());
+            dto.setTotalQuantity(entity.getVariants().stream().mapToInt(v -> v.getStockQuantity() != null ? v.getStockQuantity() : 0).sum());
 
-            // 2. Extract Unique Colors
-            dto.setAvailableColors(entity.getVariants().stream()
-                    .map(ProductVariantEntity::getColor)
-                    .distinct()
-                    .collect(Collectors.toList()));
-
-            // 3. Calculate Total Quantity
-            int total = entity.getVariants().stream()
-                    .mapToInt(v -> v.getStockQuantity() != null ? v.getStockQuantity() : 0)
-                    .sum();
-            dto.setTotalQuantity(total);
-
-            // 4. Calculate Discounted Price
             if (entity.getBasePrice() != null && entity.getDiscountPercentage() != null) {
-                double discounted = entity.getBasePrice() * (1 - (entity.getDiscountPercentage() / 100));
-                dto.setDiscountedPrice(discounted);
+                dto.setDiscountedPrice(entity.getBasePrice() * (1 - (entity.getDiscountPercentage() / 100)));
             }
         }
         return dto;
     }
 
     private void refreshProductMetrics(ProductEntity entity) {
-        int totalQty = 0;
-        if (entity.getVariants() != null) {
-            totalQty = entity.getVariants().stream()
-                    .mapToInt(v -> v.getStockQuantity() != null ? v.getStockQuantity() : 0)
-                    .sum();
-        }
+        int totalQty = (entity.getVariants() != null) ?
+                entity.getVariants().stream().mapToInt(v -> v.getStockQuantity() != null ? v.getStockQuantity() : 0).sum() : 0;
 
-        if (totalQty <= 0) {
-            entity.setStockStatus(StockStatus.OUT_OF_STOCK);
-        } else if (totalQty < 5) {
-            entity.setStockStatus(StockStatus.LOW_STOCK);
-        } else {
-            entity.setStockStatus(StockStatus.AVAILABLE);
-        }
+        if (totalQty <= 0) entity.setStockStatus(StockStatus.OUT_OF_STOCK);
+        else if (totalQty < 10) entity.setStockStatus(StockStatus.LOW_STOCK);
+        else entity.setStockStatus(StockStatus.AVAILABLE);
     }
 
     private String generateSku(ProductEntity p, ProductVariantEntity v) {
-        String category = (p.getCategory() != null) ? p.getCategory() : "GEN";
-        String productName = (p.getProductName() != null) ? p.getProductName() : "PROD";
-        String size = (v.getSize() != null) ? v.getSize() : "NOSIZ";
-
-        String catPart = category.substring(0, Math.min(category.length(), 3)).toUpperCase();
-        String namePart = productName.substring(0, Math.min(productName.length(), 3)).toUpperCase();
-
-        return (catPart + "-" + namePart + "-" + size).replace(" ", "").toUpperCase();
+        String cat = (p.getCategory() != null) ? p.getCategory().substring(0, Math.min(p.getCategory().length(), 3)) : "GEN";
+        String name = (p.getProductName() != null) ? p.getProductName().substring(0, Math.min(p.getProductName().length(), 3)) : "PRD";
+        return (cat + "-" + name + "-" + (v.getSize() != null ? v.getSize() : "NA")).toUpperCase().replace(" ", "");
     }
 
     private String generateUniqueBarcode() {
-        String timestamp = String.valueOf(System.currentTimeMillis()).substring(4);
-        int random = (int) (Math.random() * 900) + 100;
-        return timestamp + random;
+        return String.valueOf(System.currentTimeMillis()).substring(6) + ((int) (Math.random() * 900) + 100);
     }
 
     @Transactional
     public void deleteProduct(Integer id) {
-        if (!productRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Delete failed: Product ID " + id + " does not exist.");
-        }
+        if (!productRepository.existsById(id)) throw new ResourceNotFoundException("Product not found");
         productRepository.deleteById(id);
     }
 
     public List<String> getAllBarcodeIdsOnly() {
-        return variantRepository.findAll()
-                .stream()
-                .map(ProductVariantEntity::getBarcodeId)
-                .filter(id -> id != null)
-                .toList();
+        return variantRepository.findAll().stream().map(ProductVariantEntity::getBarcodeId).toList();
     }
 }
